# sparkvideo

./: CLAUDE.md  Cargo.toml  README.md  blog-removetexts-seo.md  docker-compose-china.yml  package.json  pnpm-workspace.yaml  国内部署指南.md  快速启动脚本.sh  部署指南.md
.github/workflows/: ci.yml  publish.yml
apps/desktop/: package.json
apps/desktop/scripts/: prodBeforeBundle.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.prod.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: middleware.ts
apps/web/app/: layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/web/components/: UpgradeModal.tsx
apps/web/data/: homepage-copy.ts
apps/web/lib/: Notification.ts  folder.ts  server.ts
apps/web/utils/: cors.ts  web-schema.ts
crates/audio/src/: renderer.rs
crates/camera/: Cargo.toml
crates/camera-ffmpeg/: Cargo.toml
crates/camera-ffmpeg/src/: lib.rs
crates/camera/src/: lib.rs
crates/cursor-info/: Cargo.toml
crates/editor/src/: editor_instance.rs
crates/export/src/: lib.rs
crates/flags/src/: lib.rs
crates/project/src/: configuration.rs  meta.rs
crates/recording/: Cargo.toml
crates/recording/src/: capture_pipeline.rs  lib.rs
crates/rendering/src/: lib.rs
crates/scap-ffmpeg/: Cargo.toml
crates/scap-ffmpeg/src/: lib.rs
crates/scap-targets/: Cargo.toml
crates/timestamp/: Cargo.toml
crates/timestamp/src/: lib.rs
crates/utils/: Cargo.toml
docs/: slides-feature-plan.html
patches/libDF/: Cargo.toml
patches/libDF/src/: lib.rs  ort_impl.rs  tract.rs
(+199 files in other folders)
