[package]
name = "cap-utils"
version = "0.1.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs"] }

[dependencies]
futures = "0.3.31"
tokio = { workspace = true, features = ["net", "io-util"] }
uuid = "1.11.0"
serde = { workspace = true }
serde_json = "1.0"
flume = "0.11.0"
tracing.workspace = true
directories = "5.0"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
